# NetworkMonitor

./: README.md  app.py  pyproject.toml
NetworkMonitor/: __main__.py
NetworkMonitor/routes/: network_speed_api.py  system_api.py
NetworkMonitor/static/: script.js  styles.css
NetworkMonitor/templates/: index.html
NetworkMonitor/utils/: network_speed.py  system.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  script.js  styles.css
frontend/src/: App.jsx
frontend/src/components/: Docker.jsx  NetworkStats.jsx  System.jsx
routes/: network_speed_api.py  system.py  system_api.py
static/: script.js
templates/: index.html
utils/: network_speed.py
