[tool.pdm]

[project]
name = "NetworkMonitor"
version = "0.0.1"
description = "Simple network monitor for my small server"
authors = [
    {name = "jaypyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = [
    "speedtest-cli>=2.1.3",
    "Flask[async]>=2.3.2",
    "asyncio>=3.4.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}
